# Raycasting-engine

./: CMakeLists.txt  main.cpp
data/: proba.txt
include/: Camera.h  Entity.h  EventManager.h  GraphicalInterpreter.h  MovementManager.h  Observer.h  Player.h  Segment.h  SegmentManager.h  functions.h  typedefs.h
source/: Camera.cpp  Entity.cpp  EventManager.cpp  GraphicalInterpreter.cpp  MovementManager.cpp  Observer.cpp  Player.cpp  Segment.cpp  SegmentManager.cpp  functions.cpp
